--- a/app/src/main/res/layout/layout_top.xml
+++ b/app/src/main/res/layout/layout_top.xml
@@ -7,11 +7,10 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-
+        android:background="?attr/colorPrimary"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         >
 
     </android.support.v7.widget.Toolbar>
