--- a/app/src/main/res/layout/activity_what.xml
+++ b/app/src/main/res/layout/activity_what.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -71,7 +72,7 @@
                 android:textSize="16sp"
                 android:paddingLeft="15dp"
                 android:layout_marginTop="15dp"
-                android:text="-picasso\nvolley\nbutterknife\nsnappydb\nlogger\nspots-dialog\nphotoview\nfastjson"
+                android:text="-picasso\n-volley\n-butterknife\n-snappydb\n-logger\n-spots-dialog\n-photoview\n-fastjson"
                 android:textColor="@android:color/darker_gray"
                 android:layout_height="wrap_content" />
         </LinearLayout>
