--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+   >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,6 +27,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/rv_author"
+        android:background="?attr/appbg"
         android:layout_height="match_parent"
         android:visibility="visible"
         android:layout_marginBottom="10dp" />
