--- a/app/src/main/res/drawable-v21/menuitem_selector.xml
+++ b/app/src/main/res/drawable-v21/menuitem_selector.xml
@@ -5,7 +5,7 @@
         <selector>
             <item android:state_pressed="false">
                 <shape android:shape="rectangle">
-                    <solid android:color="@android:color/transparent"/>
+                    <solid android:color="?attr/appbg"/>
                 </shape>
             </item>
             <item android:state_pressed="true">
