--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -26,7 +26,7 @@
                 <RelativeLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/white"
+                    android:background="?attr/appbg"
                     android:orientation="vertical"
                     android:paddingTop="16dp"
                     android:paddingBottom="16dp">
