--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -30,7 +30,7 @@
             android:singleLine="true"
             android:textSize="18sp"
             android:layout_marginTop="3dp"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/iv_header"
@@ -42,7 +42,7 @@
             android:singleLine="true"
             android:textSize="16sp"
             android:layout_marginTop="3dp"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:layout_below="@id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:singleLine="true"
             android:textSize="16sp"
             android:layout_marginTop="4dp"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:layout_below="@id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
