--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="280dp"
-    android:background="@android:color/white"
+    android:background="?attr/appbg"
     android:layout_gravity="start"
     android:layout_height="match_parent">
 
@@ -12,7 +12,7 @@
         android:layout_height="160dp"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"></LinearLayout>
+        android:background="?attr/colorPrimaryDark"></LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll1"
@@ -27,8 +27,9 @@
         <TextView
             android:id="@+id/tv_home"
             android:gravity="center_vertical"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:singleLine="true"
+
             android:textSize="18sp"
             android:drawableLeft="@drawable/ic_drawer_home_normal"
             android:text="  首页"
@@ -39,7 +40,7 @@
         <TextView
             android:id="@+id/tv_blog"
             android:gravity="center_vertical"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:singleLine="true"
             android:textSize="16sp"
             android:text="博客"
@@ -55,7 +56,7 @@
             android:visibility="gone"
             android:id="@+id/tv_news"
             android:gravity="center_vertical"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/textLight"
             android:singleLine="true"
             android:textSize="16sp"
             android:text="新闻"
@@ -68,7 +69,7 @@
         android:layout_below="@id/ll1"
         android:layout_marginLeft="16dp"
         android:id="@+id/tv_explore"
-        android:textColor="@android:color/black"
+        android:textColor="?attr/textLight"
         android:singleLine="true"
         android:textSize="18sp"
         android:drawableLeft="@drawable/ic_drawer_explore_normal"
@@ -86,7 +87,7 @@
         android:background="@drawable/menuitem_selector"
 
         android:id="@+id/tv_collect"
-        android:textColor="@android:color/black"
+        android:textColor="?attr/textLight"
         android:singleLine="true"
         android:textSize="18sp"
         android:drawableLeft="@drawable/ic_drawer_collect_normal"
@@ -101,7 +102,7 @@
         android:background="@drawable/menuitem_selector"
 
         android:id="@+id/tv_setting"
-        android:textColor="@android:color/black"
+        android:textColor="?attr/textLight"
         android:singleLine="true"
         android:textSize="18sp"
         android:drawableLeft="@drawable/settting"
