--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -1,5 +1,5 @@
-style-night.cssbody{font-family:Helvetica,"Microsoft Yahei",Verdana,Helvetica,SimSun,Arial,"Arial Unicode MS",MingLiu,PMingLiu,"MS Gothic",sans-serief;margin:0;padding:0 8px;background-color:#efeff0;color:#333;word-wrap:break-word;}
-p{margin-top:0;margin-bottom:5pt;line-height: 1.6em;}  
+body{font-family:Helvetica,"Microsoft Yahei",Verdana,Helvetica,SimSun,Arial,"Arial Unicode MS",MingLiu,PMingLiu,"MS Gothic",sans-serief;margin:0;padding:0 8px;background-color:#efeff0;color:#333;word-wrap:break-word;}
+p{margin-top:0;margin-bottom:5pt;line-height: 1.6em;}
 img{max-width:90%;height:auto;}
 div.bimg{text-align:center;padding:0;}
 audio{width:100%}
